--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*",
+        "illuminate/support": "~5.0",
         "intervention/image": "2.*",
         "michelf/php-markdown": "1.4.*@dev",
         "mustache/mustache": "~2.6.0"
