--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
         "leptureeditor": "git://github.com/lepture/editor.git#~0.1.0",
         "fontawesome": "~4.2.0",
         "selectize": "git://github.com/brianreavis/selectize.js.git#~0.11.2",
-        "jquery-file-upload": "git://github.com/blueimp/jQuery-File-Upload.git#~9.8.0"
+        "jquery-file-upload": "git://github.com/blueimp/jQuery-File-Upload.git#~9.8.0",
+        "imgareaselect": "git://github.com/odyniec/imgareaselect.git"
     }
 }
