--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "illuminate/html": "~5.0",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
-        "mustache/mustache": "~2.6.0"
+        "mustache/mustache": "~2.6.0",
+        "orchestra/config": "3.0.*",
+        "orchestra/support-providers": "~3.0"
     },
     "autoload": {
         "classmap": [
