--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,11 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "5.0.*",
+        "laravel/framework": "5.0.*",
         "illuminate/html": "5.0.*",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
-        "mustache/mustache": "~2.6.0",
-        "orchestra/config": "3.0.*",
-        "orchestra/support-providers": "~3.0"
+        "mustache/mustache": "~2.6.0"
     },
     "autoload": {
         "classmap": [
