--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "require": {
         "php": ">=5.4.0",
         "laravel/framework": "5.0.*",
-        "illuminate/html": "5.0.*",
+        "laravelcollective/html": "5.0.*",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
         "mustache/mustache": "~2.6.0"
