--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-contrib-less": "~0.11.0",
     "grunt-contrib-watch": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.0"
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-cssmin": "~0.12.2"
   }
 }
