--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,15 @@
 {
-    "name": "Sharp",
-    "version": "3.0.0",
-    "dependencies": {
-        "jquery": "~2.1.1",
-        "bootstrap": "~3.3.0",
-        "datetimepicker": "git://github.com/xdan/datetimepicker.git#~2.4.0",
-        "mirrormark": "~1.0.0",
-        "fontawesome": "~4.3.0",
-        "selectize": "git://github.com/brianreavis/selectize.js.git#~0.12.0",
-        "jquery-file-upload": "git://github.com/blueimp/jQuery-File-Upload.git#~9.8.0",
-        "imgareaselect": "git://github.com/odyniec/imgareaselect.git"
-    }
+  "name": "Sharp",
+  "version": "3.0.0",
+  "dependencies": {
+    "bootstrap": "~3.3.0",
+    "datetimepicker": "git://github.com/xdan/datetimepicker.git#~2.4.0",
+    "fontawesome": "~4.3.0",
+    "imgareaselect": "git://github.com/odyniec/imgareaselect.git",
+    "jquery": "~2.1.1",
+    "jquery-file-upload": "git://github.com/blueimp/jQuery-File-Upload.git#~9.8.0",
+    "mirrormark": "~1.0.0",
+    "selectize": "git://github.com/brianreavis/selectize.js.git#~0.12.0",
+    "sweetalert": "~1.1.0"
+  }
 }
