Auth redesign based on Laravel Auth + Laravel 5.1 ACL

--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,10 @@
 {
     "name": "dvlpp/sharp",
     "description": "A kind of CMS for developers who hate CMS",
-    "authors": [
-        {
-            "name": "Philippe Lonchampt",
-            "email": "philippelonchampt@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "Philippe Lonchampt",
+        "email": "philippelonchampt@gmail.com"
+    }],
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
