--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "require": {
         "php": ">=5.6.0",
         "laravel/framework": "5.1.*|5.2.*",
-        "laravelcollective/html": "5.1.*",
+        "laravelcollective/html": "5.1.*|5.2.*",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
         "mustache/mustache": "~2.6.0"
