--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     }],
     "require": {
         "php": ">=5.6.0",
-        "laravel/framework": "5.1.*|5.2.*",
-        "laravelcollective/html": "5.1.*|5.2.*",
+        "laravel/framework": "5.2.*",
+        "laravelcollective/html": "5.2.*",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
         "mustache/mustache": "~2.6.0"
     },
     "require-dev": {
-        "laravel/laravel": "5.1.*",
+        "laravel/laravel": "5.2.*",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
