--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "dependencies": {
     "bootstrap": "~3.3.0",
-    "datetimepicker": "git://github.com/xdan/datetimepicker.git#~2.4.0",
+    "datetimepicker": "git://github.com/xdan/datetimepicker.git#~2.5.0",
     "dragula.js": "dragula#~3.3.0",
     "dropzone": "~4.0.1",
     "fontawesome": "~4.3.0",
@@ -11,6 +11,7 @@
     "jquery": "~2.1.1",
     "mirrormark": "~1.0.0",
     "selectize": "git://github.com/brianreavis/selectize.js.git#~0.12.0",
-    "sweetalert": "~1.1.0"
+    "sweetalert": "~1.1.0",
+    "php-date-formatter": "^1.3.3"
   }
 }
