--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "jquery": "~2.1.1",
     "mirrormark": "~1.0.0",
     "selectize": "git://github.com/brianreavis/selectize.js.git#~0.12.0",
-    "sweetalert": "~1.1.0"
+    "sweetalert": "~1.1.0",
+    "php-date-formatter": "^1.3.3"
   }
 }
