--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,17 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*|5.3.*",
-        "laravelcollective/html": "5.2.*|5.3.*",
+        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*",
+        "laravelcollective/html": "5.2.*|5.3.*|5.4.*|5.5.*",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
         "mustache/mustache": "~2.6.0"
     },
     "require-dev": {
-        "laravel/laravel": "5.2.*|5.3.*",
+        "laravel/laravel": "5.5.*",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~4.0",
+        "phpunit/phpunit": "~6.0",
         "phpspec/phpspec": "~2.1",
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
