--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,20 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*",
-        "laravelcollective/html": "5.2.*|5.3.*|5.4.*|5.5.*",
+        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
+        "laravelcollective/html": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
         "mustache/mustache": "~2.6.0"
     },
     "require-dev": {
-        "laravel/laravel": "5.5.*",
-        "laravel/browser-kit-testing": "^1.0",
+        "laravel/laravel": "5.6.*",
+        "laravel/browser-kit-testing": "^4.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
-        "phpspec/phpspec": "~2.1",
-        "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "phpunit/phpunit": "~7.0",
+        "symfony/css-selector": "2.8.*|3.0.*|4.0.*",
+        "symfony/dom-crawler": "2.8.*|3.0.*|4.0.*",
         "doctrine/dbal": "~2.5"
     },
     "autoload": {
