--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     }],
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-        "laravelcollective/html": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
+        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
+        "laravelcollective/html": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*|5.8.*",
         "intervention/image": "2.*",
         "erusev/parsedown": "~1.1",
         "mustache/mustache": "~2.6.0"
     },
     "require-dev": {
-        "laravel/laravel": "5.6.*",
+        "laravel/laravel": "5.8.*",
         "laravel/browser-kit-testing": "^4.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
